tests/cases/errors/compile_expression_no_semicolon.lox
// expect compile error: Expect ';' after expression
1 + 1
